ocp-mcp/all-in-one.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: ocp-mcp-server
  name: ocp-mcp-server
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ocp-mcp-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ocp-mcp-server
        deployment: ocp-mcp-server
    spec:
      containers:
      - args:
        - --port
        - "8000"
        command:
        - ./kubernetes-mcp-server
        image: quay.io/balki404/ocp-mcp-server:1.0.4-debug
        imagePullPolicy: Always
        name: ocp-mcp-server
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: ocp-mcp
      serviceAccountName: ocp-mcp
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ocp-mcp-server
  name: ocp-mcp-server
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8000
  selector:
    app: ocp-mcp-server
    deployment: ocp-mcp-server
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ocp-mcp
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
spec:
  path: /
  to:
    kind: Service
    name: ocp-mcp-server
    weight: 100
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
